# soroban-debugger

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FLAMEGRAPH_IMPLEMENTATION.md  ISSUE_507_RESOLUTION.md  ISSUE_BACKLOG_2026-03-28.md  Makefile  README.md  Readme.md  SECURITY.md  build.rs  check_output.txt  fix_corruption_2.py  fix_duplicates.py  lib.rs  plugin.toml  refactor_debug_server.py  run_local_ci.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: backlog_item.yml  batch-execution.md  batch-result-buckets.md  bug_report.yml  cli-command-groups.md  faq.md  feature-matrix.md  feature_request.yml  index.md  performance-regressions.md  plugin-api.md  plugin-manifest-versioning.md  plugin-sandbox-policy.md  release-artifacts.md  release-checklist.md  remote-debugging.md  remote-reconnect.md  remote-troubleshooting.md  repl-history.md  scenario-cookbook.md  session-bookmarks.md  snapshot-compression.md  timeline-export.md  troubleshooting-index.md  wasm-artifact-metadata.md
docs/issues/: backlog-100-issues.md  roadmap-priorities.md
docs/tutorials/: debug-auth-errors.md  first-debug.md  inspect-a-contract.md  plugin-development.md  profile-a-hotspot.md  replay-a-regression.md  run-first-session.md  scenario-runner.md  symbolic-analysis-budgets.md  upgrade-review.md  video-token-transfer.md  vscode-extension-setup.md
examples/: README.md  plugin-policy.toml  test_unbounded_iteration.rs
extensions/vscode/: README.md  package.json  tsconfig.json
man/man1/: soroban-debug-completions.1  soroban-debug-doctor.1  soroban-debug-inspect.1  soroban-debug-interactive.1  soroban-debug-plugin-inspect.1  soroban-debug-plugin-trust-report.1  soroban-debug-profile.1  soroban-debug-remote-evaluate.1  soroban-debug-remote-inspect.1  soroban-debug-remote-storage.1  soroban-debug-remote.1  soroban-debug-repl.1  soroban-debug-run.1  soroban-debug-scenario.1  soroban-debug-server.1  soroban-debug-symbolic.1  soroban-debug-tui.1  soroban-debug.1
scripts/: check_benchmark_regressions.sh  check_manpages.sh  test_manpage_tmpdir.sh
src/: batch.rs  benchmarks.rs  config.rs  lib.rs  logging.rs  main.rs  output.rs  repeat.rs  scenario.rs
src/analyzer/: security.rs  symbolic.rs
src/cli/: args.rs  commands.rs  mod.rs  output.rs
src/client/: remote_client.rs
src/commands/: inspect.rs
src/compare/: trace.rs
src/debugger/: breakpoint.rs  engine.rs  engine_test.rs  source_map.rs  state.rs  stepper.rs  timeline.rs
src/history/: mod.rs
src/plugin/: README.md  api.rs  events.rs  loader.rs  manifest.rs  mod.rs  registry.rs
src/profiler/: analyzer.rs  flamegraph.rs  mod.rs  session.rs
src/repl/: commands.rs  executor.rs  session.rs
src/runtime/: env.rs  executor.rs  invoker.rs  loader.rs  result.rs
src/server/: debug_server.rs  mod.rs  protocol.rs
src/ui/: dashboard.rs  tui.rs
src/utils/: wasm.rs
tests/: arithmetic_rule.rs  command_feature_tests.rs  heartbeat_tests.rs  parity_tests.rs  plugin_tests.rs  reconnect_tests.rs  remote_run_tests.rs  security_import_name_tests.rs  server_signal_handling_tests.rs  source_map_test.rs  source_step_over_tests.rs  timeout_cancellation_tests.rs  unbounded_iteration_tests.rs
tests/cli/: flamegraph_tests.rs  inspect_tests.rs
tests/network/: mod.rs
(+21 files in other folders)
