[workspace]
members = [
    ".",
    "crates/soroban-debug-mock",
    "examples/mock-usage",
]

[package]
name = "soroban-debugger"
version = "0.1.0"
edition = "2021"
authors = ["Soroban Debugger Contributors"]
description = "A debugging tool for Soroban smart contracts"
repository = "https://github.com/Timi16/soroban-debugger"
homepage = "https://github.com/Timi16/soroban-debugger"
documentation = "https://docs.rs/soroban-debugger"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["stellar", "soroban", "debugger", "blockchain", "smart-contracts"]
categories = ["development-tools::debugging", "command-line-utilities"]
exclude = [
    ".github/",
    ".vscode/",
    ".kiro/",
    "docs/",
    "examples/",
    "test_snapshots/",
    "fuzz/",
    "benches/",
    "extensions/",
    ".dockerignore",
    "docker-compose.yml",
    "Dockerfile",
    "cliff.toml",
    "ARCHITECTURE.md",
    "BATCH_EXECUTION_SUMMARY.md",
    "CONTRIBUTING.md",
    "test_snapshot.rs",
]

[dependencies]
# Soroban SDK and runtime
soroban-sdk = { version = "22.0.2", features = ["testutils"] }
soroban-env-host = { version = "22.1.3", features = ["testutils"] }
soroban-env-common = "22.0.0"

# CLI and argument parsing
clap = { version = "4.5", features = ["derive", "cargo", "string", "env"] }
clap_complete = "4.5"

# Terminal UI
ratatui = "0.26"
crossterm = "0.27"

# WASM parsing
wasmparser = "0.121"
walrus = "0.20"
gimli = "0.28"
object = "0.32"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
miette = { version = "7.0", features = ["fancy"] }

# Networking
tokio = { version = "1.36", features = ["full"] }
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
rustls-native-certs = "0.6"
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Utilities
itertools = "0.12"
regex = "1.10"
toml = "0.8"
textplots = "0.8"
chrono = "0.4"
rayon = "1.10"
colored = "2.0"
indicatif = "0.17"
stellar-xdr = { version = "22.1.0", features = ["curr"] }
hex = "0.4.3"
base64 = "0.21.7"
sha2 = "0.10.9"
ed25519-dalek = "2.1"
libloading = "0.8"
dirs = "5.0"
atty = "0.2"

is-terminal = "0.4"

# REPL and readline
rustyline = "13.0"

# Flame graph generation
inferno = "0.11"

# Snapshot loading
soroban-ledger-snapshot = "22.0.2"
cargo-llvm-cov = "0.8.5"


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
proptest = "1.0"
criterion = "0.5"
jsonschema = "0.17"

[[bench]]
name = "wasm_loading"
harness = false

[[bench]]
name = "contract_execution"
harness = false

[[bench]]
name = "argument_parsing"
harness = false

[[bench]]
name = "storage_ops"
harness = false

[[bench]]
name = "state_management"
harness = false

[build-dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
clap_mangen = "0.2"
clap_complete = "4.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "soroban-debug"
path = "src/main.rs"
bench = false

[lib]
name = "soroban_debugger"
path = "src/lib.rs"
bench = false
